--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,54 @@
 @import "./mixins.css";
 @import "./base.css";
+
+html {
+  box-sizing: border-box;
+}
+
+.container {
+  max-width: 400px;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+button {
+  padding: 8px 20px;
+
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid rgb(201, 201, 201);
+
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.13);
+
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+button:disabled {
+  opacity: 0.3;
+
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.13);
+}
+
+button:hover {
+  background-color: rgb(248, 248, 248);
+}
+
+button:active,
+button:focus {
+  background-color: rgb(250, 250, 250);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.13);
+}
+
+button:focus {
+  background-color: rgb(250, 247, 233);
+  outline: none;
+}
+
+progress {
+  width: 100%;
+}
