--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,8 @@ html {
 button {
   padding: 8px 20px;
 
+  font: inherit;
+
   background-color: transparent;
   border-radius: 5px;
   border: 1px solid rgb(201, 201, 201);
@@ -45,7 +47,7 @@ button:focus {
 }
 
 button:focus {
-  background-color: rgb(250, 247, 233);
+  background-color: rgb(255, 245, 204);
   outline: none;
 }
 
