--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,38 @@ html {
   padding-left: 20px;
 }
 
+.pomodoro__title {
+  margin-top: 0;
+  margin-bottom: 20px;
+
+  font-size: 36px;
+  text-align: center;
+}
+
+.pomodoro__controls {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+
+  background-color: rgb(250, 250, 250);
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.04);
+}
+
+.pomodoro__controls button {
+  background-color: rgb(245, 245, 245);
+}
+
+.pomodoro__header {
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.pomodoro__progress {
+  margin-bottom: 40px;
+}
+
 button {
   padding: 8px 20px;
 
@@ -21,7 +53,7 @@ button {
 
   background-color: transparent;
   border-radius: 5px;
-  border: 1px solid rgb(201, 201, 201);
+  border: 1px solid rgb(200, 200, 200);
 
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.13);
 
