--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,12 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  font-family: Muller, Arial, Helvetica, sans-serif;
+}
+
 .container {
-  max-width: 400px;
+  max-width: 440px;
   width: 100%;
   margin-right: auto;
   margin-left: auto;
@@ -16,30 +20,29 @@ html {
 
 .pomodoro__title {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 
-  font-size: 36px;
+  font-size: 42px;
+  font-weight: 300;
   text-align: center;
 }
 
 .pomodoro__controls {
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  padding: 20px 30px;
 
-  background-color: rgb(250, 250, 250);
   border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.05);
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.04);
+  border: 1px solid #dfe1e5;
 }
 
 .pomodoro__controls button {
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(250, 250, 250);
 }
 
 .pomodoro__header {
   padding-top: 60px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 .pomodoro__progress {
@@ -48,10 +51,11 @@ html {
 
 .pomodoro__label {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 40px;
   margin: 5px;
+  margin-top: 20px;
   padding-right: 20px;
   padding-left: 20px;
 }
@@ -60,18 +64,20 @@ html {
   margin-top: 0;
   margin-bottom: 0;
 
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 42px;
+  font-weight: 400;
 }
 
-.pomodoro__icon {
-  margin-right: 20px;
+.pomodoro__icon__wrap {
+  width: 35px;
+  height: 35px;
+  margin-bottom: 16px;
 }
 
 .pomodoro__icon {
   display: none;
 }
-
+ 
 .pomodoro__icon[src] {
   display: block;
 }
@@ -80,6 +86,8 @@ button {
   padding: 8px 20px;
 
   font: inherit;
+  font-size: 16px;
+  font-weight: 300;
   color: black;
 
   background-color: transparent;
@@ -114,8 +122,25 @@ button:focus {
   outline: none;
 }
 
-progress {
+progress[value] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
   width: 100%;
+  height: 4px;
+
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+progress[value]::-webkit-progress-bar {
+  background-color: #f0f0f0;
+}
+
+progress[value]::-webkit-progress-value {
+  background-color: rgb(36, 135, 216);
 }
 
 .duration-form {
@@ -144,9 +169,10 @@ progress {
 
 .field__input {
   width: 60px;
-  height: 34px;
+  height: 40px;
 
   font: inherit;
+  font-size: 18px;
   text-align: center;
 
   border: 2px solid rgb(226, 226, 226);
