--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  max-width: 440px;
+  max-width: 460px;
   width: 100%;
   margin-right: auto;
   margin-left: auto;
@@ -83,7 +83,7 @@ body {
 }
 
 button {
-  padding: 8px 20px;
+  padding: 10px 24px;
 
   font: inherit;
   font-size: 16px;
@@ -128,7 +128,7 @@ progress[value] {
   right: 0;
   left: 0;
   width: 100%;
-  height: 4px;
+  height: 5px;
 
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -155,12 +155,16 @@ progress[value]::-webkit-progress-value {
   display: flex;
   justify-content: center;
   grid-column: 1/4;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .field {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .field__label {
